* finished Issue 67: Show number of files stored in each folder * fixed IE icon layout problem
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk/redmine_dmsf@116 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/assets/stylesheets/dmsf.css
+++ b/assets/stylesheets/dmsf.css
@@ -4,6 +4,10 @@ button {
 	margin-bottom: 1px;
 }
 
+.contextual img {
+	line-height: 0;
+}
+
 /* DMSF entries list */
 table.entries tbody td, table.entries tbody tr:hover td {
 	border: solid 1px #D7D7D7;
